[gd_scene load_steps=8 format=3 uid="uid://doa41q24r2eid"]

[ext_resource type="Texture2D" uid="uid://jyht0bycll06" path="res://art/cards/card_art/card-template.png" id="1_2al02"]
[ext_resource type="Script" path="res://scenes/card_stats.gd" id="2_vhlj7"]
[ext_resource type="Theme" uid="uid://dtid5ck6aq1lr" path="res://themes/card_theme.tres" id="3_bis42"]
[ext_resource type="Resource" uid="uid://getptn3kqhxl" path="res://components/cards/CardDictionary/Player/HealCards/basic_heal.tres" id="3_kvvc5"]
[ext_resource type="PackedScene" uid="uid://bi6cus3fyu7ux" path="res://components/modifiers.tscn" id="4_k3k1f"]
[ext_resource type="Texture2D" uid="uid://b5p1xc0bcs58e" path="res://art/cards/card_art/basic_heal.png" id="6_f5ubv"]
[ext_resource type="Texture2D" uid="uid://brtypga5cij3r" path="res://art/cards/burn-card-cost-blip.png" id="7_htwk4"]

[node name="Card" type="TextureRect"]
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.356
anchor_right = 0.075
anchor_bottom = 0.356
offset_left = -46.0
offset_top = -127.16
offset_right = 146.0
offset_bottom = 128.84
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_2al02")
script = ExtResource("2_vhlj7")
card_stats = ExtResource("3_kvvc5")

[node name="Modifiers" parent="." instance=ExtResource("4_k3k1f")]

[node name="CardName" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 4.0
offset_right = 66.0
offset_bottom = 30.0
grow_horizontal = 2
theme = ExtResource("3_bis42")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Basic Heal"

[node name="IconImage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_top = 36.0
offset_right = 76.0
offset_bottom = 158.0
grow_horizontal = 2
texture = ExtResource("6_f5ubv")

[node name="Description" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 166.0
offset_right = 76.0
offset_bottom = 241.0
grow_horizontal = 2
mouse_filter = 1
theme = ExtResource("3_bis42")
theme_override_constants/line_separation = -8
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Restore <null> health"
scroll_active = false

[node name="CostIndicator" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = -4.0
offset_top = -2.0
offset_right = 26.0
offset_bottom = 28.0
theme = ExtResource("3_bis42")
texture = ExtResource("7_htwk4")
metadata/_edit_group_ = true

[node name="Cost" type="Label" parent="CostIndicator"]
layout_mode = 1
offset_left = 10.0
offset_top = -1.0
offset_right = 22.0
offset_bottom = 25.0
theme = ExtResource("3_bis42")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
